<resources>
    <string name="app_name">Naayee</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">NaaYee Title</string>
    <string name="nav_header_subtitle">android@androidstudio.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="please_allow_all_above_permission">please allow all above permission</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="secret">QnScKW8tpJZOfcAtNnEHEihz</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="enter_name">Enter Name</string>
    <string name="please_fill_the_booking_details">Please fill the booking details</string>
    <string name="mobile_no">Mobile No</string>
    <string name="select_payment_mode">Select Payment Mode</string>
    <string name="confirm_amp_book_now"><![CDATA[Confirm & Book Now]]></string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
</resources>